--- a/estilo.css
+++ b/estilo.css
@@ -40,7 +40,7 @@ nav ul li a:hover {
 .container {
     position: relative;
     width: 100%;
-    height: 500px; /* Altura fija para mejor distribución */
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
